# corpus

./: .gitignore  .mcp.json  AGENTS.md  BOUCHET.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  INSTALL.md  PLAN.md  README.md  Snakefile  Snakemake  USAGE_NEW.md  backfill_figure_dpi.py  backfill_intext_citations.py  batch_biblio.sh  batch_embed.sh  batch_pass3b.sh  batch_pipeline.sh  batch_process_corpus.sh  bib_export.py  bib_import.py  bib_metadata.py  build_biblio_authority.py  build_taxon_mentions.py  config.yaml  corpus_status.py  dedup_ghost_works.py  docker-compose.yml  embed_chunks.py  embeddings.py  environment.yaml  external.py  figures.py  grobid_client.py  ingest_taxonomy.py  ingest_worms.py  mcp_server.py  (+12 more)
.github/workflows/: integration.yml  lint.yml
bib/: __init__.py  authority.py  export.py  format.py  importer.py  parser.py  reconcile.py
demo/: config.yaml  instructions.md  lexicon.yaml  siphonophores.bib
deploy/: corpus-mcp.service  nginx.conf  stack.yaml  sync_to_s3.sh  update.sh
dev_docs/: ACCEPTANCE_PROMPTS.md  BOUCHET.md  DEPLOY.md  Dockerfile.smoke  INSTALL.md  LICENSING.md  MCP_TOOLS.md  OVERVIEW.md  PLAN.md  PLATFORM_SMOKE.md  QC.md  TESTING.md  clean_install_walkthrough.sh  ec2_smoke.sh
mcpsrv/: __init__.py  app.py  bundle.py  default_instructions.md  figure_http.py  indexes.py  main.py  profiles.py  transport.py
mcpsrv/tools/: __init__.py  (+7 more)
pipeline/: __init__.py  annotate.py  chunking.py  cli.py  config.py  config.template.yaml  config_schema.py  console.py  embed.py  embeddings.py  external.py  extract.py  figure_passes.py  figures.py  grobid_client.py  io.py  log.py  main.py  metadata.py  orchestrator.py  runner.py  scan.py  stages.py  status.py  taxa.py  taxon_mentions.py  taxonomy_export.py  taxonomy_ingest.py  version.py  vision.py
scripts/: build_biblio_authority.py  build_taxon_mentions.py  chunk_text.py  detect_scan.py  embed_and_store.py  extract_docling.py  extract_figures_alternate.py  extract_metadata.py  ingest_worms.py  prepare_pdf.py  reconcile_corpus_to_biblio.py  run_mcp_server.sh
slurm/: batch_biblio.sh  batch_embed.sh  batch_finalize.sh  batch_grobid.sh  batch_pass3b.sh  batch_pipeline.sh  batch_process_corpus.sh  bouchet_paths.sh  launch_production.sh
templates/: instructions.md
tests/: conftest.py  test_author_diacritics.py  test_authority_parse.py  test_batch_slicing.py  test_bib_export.py  test_bib_format.py  test_bib_import.py  test_bib_provenance_preservation.py  test_biblio_cascade.py  test_biblio_provenance.py  test_chunks_for_topic_with_text.py  test_citation_graph_caps.py  test_config_schema.py  test_console.py  test_corpus_check_arch.py  test_corpus_run_hpc.py  test_corpus_status.py  test_corpus_summary.py  test_corpus_wide.py  test_debug_pdf.py  test_dedup_ghost_works.py  test_external.py  test_extraction_guard.py  test_figure_caption_preview.py  test_figure_dossier.py  test_figure_dpi_backfill.py  test_figure_extraction.py  test_figure_number_archaic.py  test_figure_panels_flag.py  test_find_all_pdfs.py  test_format_citation_tool.py  test_freeze_contract.py  test_healthz.py  test_hf_token_env.py  test_intext_citations.py  test_lexicon_multi_category.py  test_lexicon_tools.py  test_mcp_auth.py  test_no_undefined_names.py  test_output_profiles.py  (+21 more)
tools/: install_tessdata.sh  run_mcp_server.sh  smoke_test_sse.py  unify_doi_corpus_key.py
(+11 files in other folders)
